Fixed avatar wrapper spacing when the chat text scale is changed.

--- a/css/main.css
+++ b/css/main.css
@@ -629,7 +629,8 @@
 	color: white;
 	background-color: #15843c;
 }
-.container-1YxwTf .wrapper-2F3Zv8 {left: 10px;}
+
+.container-1YxwTf .wrapper-2F3Zv8 {left: 0.625rem;}
 
 .chat .has-more button {
 	background: #282828 !important;
